[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Enemis/2/planes_08A_4.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemis/2/planes_08A_1.png" type="Texture" id=2]
[ext_resource path="res://scripts/Enemies/EnemyFast.gd" type="Script" id=3]
[ext_resource path="res://scenes/Effects/Explosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Enemis/2/planes_08A_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemis/2/planes_08A_3.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ) ],
"loop": true,
"name": "vertical",
"speed": 5.0
} ]

[node name="EnemyBase" type="Area2D" groups=["enemy"]]
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 3 )
Explosion = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "vertical"
flip_v = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 3 )
scale = Vector2( 0.5, 0.5 )
polygon = PoolVector2Array( -0.333333, 21.3333, -3, 8.66667, -9, -4.33333, -17.6667, 1.33333, -14.6667, -3.66667, -6.33333, -11.6667, -27.3333, -23, -23.6667, -25.6667, -6, -22, 9.33333, -22.3333, 26.3333, -26.3333, 27, -23.3333, 8.66667, -14, 7.66667, -9.33333, 19, 0, 16.6667, 0.333333, 8.66667, -3.33333 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -1.19209e-07, 3 )
scale = Vector2( 1.3, 1.3 )

[node name="ExplosionSpawn" type="Position2D" parent="."]
position = Vector2( 0, 14.6667 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
